--- a/initial.ipynb
+++ b/initial.ipynb
@@ -1,21 +1,10 @@
 {
  "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3"
-  },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python383jvsc74a57bd0715936496f0999366caedd40c05d07bf1ba3d51d5d6c498db7eaa258bfdbe84f",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+   "name": "python38-azureml",
+   "display_name": "Python 3.8 - AzureML",
+   "language": "python"
   },
   "metadata": {
    "interpreter": {
@@ -95,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -164,11 +153,45 @@
       "text/html": "<table style=\"width:100%\"><tr><th>Name</th><th>Workspace</th><th>State</th><th>Location</th><th>VmSize</th><th>Application URI</th><th>SSH</th><th>Docs</th></tr><tr><td><a href=\"https://ml.azure.com/compute/ndecompute1/details?wsid=/subscriptions/a0022170-09d3-48b7-8074-a1cf3e8e0b76/resourcegroups/rice_capstone/workspaces/ndeml1\" target=\"_blank\" rel=\"noopener\">ndecompute1</a></td><td><a href=\"https://ml.azure.com?wsid=/subscriptions/a0022170-09d3-48b7-8074-a1cf3e8e0b76/resourcegroups/rice_capstone/workspaces/ndeml1&amp;tid=7e83b19f-49ba-418a-8f47-db272c14be9e\" target=\"_blank\" rel=\"noopener\">ndeml1</a></td><td>Running</td><td>southcentralus</td><td>STANDARD_DS2_V2</td><td><a href=\"https://ndecompute1.southcentralus.instances.azureml.ms\" target=\"_blank\" rel=\"noopener\">Jupyter</a>  <a href=\"https://ndecompute1.southcentralus.instances.azureml.ms/lab\" target=\"_blank\" rel=\"noopener\">JupyterLab</a>  <a href=\"https://ndecompute1-8787.southcentralus.instances.azureml.ms\" target=\"_blank\" rel=\"noopener\">RStudio</a></td><td>azureuser@20.94.161.163 -p 50001</td><td><a href=\"https://docs.microsoft.com/en-us/python/api/azureml-core/azureml.core.compute.computeinstance.ComputeInstance?view=azure-ml-py\" target=\"_blank\" rel=\"noopener\">Doc</a></td></tr></table>"
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 14
     }
    ],
    "source": [
     "ws.compute_targets['ndecompute1']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello!')"
    ]
   }
  ]
